Compiladores-G19/src/main/java/compi/g19/AnalisisSintactico/y.output
   0  $accept : programa $end

   1  programa : ID BEGIN list_sentencias END
   2           | BEGIN list_sentencias END
   3           | ID BEGIN list_sentencias
   4           | ID list_sentencias END
   5           | ID list_sentencias

   6  list_sentencias : list_sentencias sentencia
   7                  | sentencia

   8  sentencia : sentencia_declarativa ';'
   9            | sentencia_ejecutable ';'
  10            | sentencia_ejecutable
  11            | sentencia_declarativa

  12  sentencia_declarativa : tipo list_variables
  13                        | declaracion_funcion
  14                        | declaracion_tipo

  15  sentencia_ejecutable : asignacion
  16                       | invocacion_funcion
  17                       | bloque_if
  18                       | salida_mensaje
  19                       | sentencia_control

  20  sentencia_control : FOR '(' encabezado_for ')' bloque_sentencias_ejecutables
  21                    | FOR '(' encabezado_for ')' error
  22                    | FOR encabezado_for ')' bloque_sentencias_ejecutables
  23                    | FOR '(' encabezado_for bloque_sentencias_ejecutables

  24  encabezado_for : encabezado_for1
  25                 | encabezado_for2

  26  encabezado_for1 : asignacion_for ';' condicion ';' up_down CONSTANTE
  27                  | asignacion_for ';' condicion ';' CONSTANTE
  28                  | asignacion_for condicion ';' up_down CONSTANTE
  29                  | asignacion_for ';' condicion up_down CONSTANTE
  30                  | asignacion_for ';' condicion ';' up_down

  31  encabezado_for2 : asignacion_for ';' condicion ';' up_down CONSTANTE ';' '(' condicion ')'
  32                  | asignacion_for ';' condicion ';' CONSTANTE ';' '(' condicion ')'
  33                  | asignacion_for condicion ';' up_down CONSTANTE ';' '(' condicion ')'
  34                  | asignacion_for ';' condicion up_down CONSTANTE ';' '(' condicion ')'
  35                  | asignacion_for ';' condicion ';' up_down '(' condicion ')'

  36  asignacion_for : ID ASIGNACION CONSTANTE

  37  up_down : UP
  38          | DOWN

  39  asignacion : ID ASIGNACION expresion
  40             | ID '[' CONSTANTE ']' ASIGNACION expresion
  41             | ID ASIGNACION error

  42  tipo : tipo_base
  43       | ID

  44  tipo_base : ULONGINT
  45            | SINGLE

  46  list_variables : list_variables ',' ID
  47                 | list_variables ID
  48                 | ID

  49  encabezado_funcion : tipo FUN ID
  50                     | tipo FUN

  51  $$1 :

  52  declaracion_funcion : encabezado_funcion '(' parametro ')' BEGIN cuerpo_funcion $$1 END
  53                      | encabezado_funcion '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END
  54                      | encabezado_funcion '(' ')' BEGIN cuerpo_funcion END

  55  parametro : tipo ID
  56            | ID

  57  bloque_list_parametro : list_parametro ',' parametro

  58  list_parametro : parametro
  59                 | list_parametro ',' parametro

  60  cuerpo_funcion : list_sentencias_funcion sentencia_return ';'
  61                 | list_sentencias_funcion
  62                 | sentencia_return ';'
  63                 |

  64  list_sentencias_funcion : list_sentencias_funcion sentencia
  65                          | sentencia

  66  sentencia_return : RET '(' expresion ')'

  67  expresion : expresion '+' termino
  68            | expresion '-' termino
  69            | termino
  70            | expresion '+' error
  71            | expresion '-' error

  72  termino : termino '*' factor
  73          | termino '/' factor
  74          | factor
  75          | termino '*' error
  76          | termino '/' error

  77  factor : ID
  78         | CONSTANTE
  79         | invocacion_funcion
  80         | ID '[' CONSTANTE ']'
  81         | '-' ID
  82         | '-' CONSTANTE
  83         | '-' ID '[' CONSTANTE ']'

  84  declaracion_tipo : TYPEDEF TRIPLE '<' tipo_base '>' ID
  85                   | TYPEDEF TRIPLE '<' tipo_base '>' error
  86                   | TYPEDEF TRIPLE tipo_base '>' ID
  87                   | TYPEDEF TRIPLE '<' tipo_base ID
  88                   | TYPEDEF TRIPLE tipo_base ID
  89                   | TYPEDEF '<' tipo_base '>' ID

  90  invocacion_funcion : ID '(' expresion ')'
  91                     | ID '(' bloque_list_expresiones ')'
  92                     | ID '(' ')'
  93                     | ID '(' tipo_base '(' expresion ')' ')'

  94  fin_if : END_IF
  95         | error

  96  bloque_sentencias_ejecutables : sentencia_ejecutable ';'
  97                                | BEGIN list_sentencias_ejecutables END
  98                                | BEGIN error

  99  encabezado_if : IF

 100  bloque_if : encabezado_if '(' condicion ')' THEN cuerpo_if_unico fin_if
 101            | encabezado_if '(' condicion ')' THEN cuerpo_if_bloque fin_if
 102            | encabezado_if '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if
 103            | encabezado_if '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if
 104            | encabezado_if '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if
 105            | encabezado_if '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if
 106            | encabezado_if '(' condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico fin_if
 107            | encabezado_if '(' condicion ')' THEN cuerpo_if_bloque cuerpo_if_unico fin_if
 108            | encabezado_if '(' condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico

 109  cuerpo_if_unico : sentencia_ejecutable ';'
 110                  | sentencia_return ';'
 111                  | sentencia_return error
 112                  | BEGIN sentencia_return ';' END
 113                  | BEGIN sentencia_return ';' END ';'

 114  cuerpo_if_bloque : BEGIN list_sentencias_ejecutables END
 115                   | BEGIN list_sentencias_ejecutables sentencia_return END
 116                   | BEGIN error
 117                   | list_sentencias_ejecutables END

 118  list_sentencias_ejecutables : list_sentencias_ejecutables sentencia_ejecutable ';'
 119                              | sentencia_ejecutable ';'

 120  comparacion : MAYORIGUAL
 121              | MENORIGUAL
 122              | DISTINTO
 123              | '='
 124              | '>'
 125              | '<'

 126  condicion : expresion comparacion expresion

 127  $$2 :

 128  $$3 :

 129  $$4 :

 130  $$5 :

 131  condicion : '(' $$2 bloque_list_expresiones $$3 ')' comparacion '(' $$4 bloque_list_expresiones $$5 ')'
 132            | error

 133  bloque_list_expresiones : list_expresiones ',' expresion

 134  list_expresiones : list_expresiones ',' expresion
 135                   | expresion
 136                   | error

 137  salida_mensaje : OUTF '(' CADENA ')'
 138                 | OUTF '(' expresion ')'
 139                 | OUTF '(' error ')'
 140                 | OUTF '(' ')'

state 0
	$accept : . programa $end  (0)

	ID  shift 1
	BEGIN  shift 2
	.  error

	programa  goto 3


state 1
	programa : ID . BEGIN list_sentencias END  (1)
	programa : ID . BEGIN list_sentencias  (3)
	programa : ID . list_sentencias END  (4)
	programa : ID . list_sentencias  (5)

	ID  shift 4
	IF  shift 5
	BEGIN  shift 6
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 12
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 2
	programa : BEGIN . list_sentencias END  (2)

	ID  shift 4
	IF  shift 5
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 27
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 3
	$accept : programa . $end  (0)

	$end  accept


state 4
	asignacion : ID . ASIGNACION expresion  (39)
	asignacion : ID . '[' CONSTANTE ']' ASIGNACION expresion  (40)
	asignacion : ID . ASIGNACION error  (41)
	tipo : ID .  (43)
	invocacion_funcion : ID . '(' expresion ')'  (90)
	invocacion_funcion : ID . '(' bloque_list_expresiones ')'  (91)
	invocacion_funcion : ID . '(' ')'  (92)
	invocacion_funcion : ID . '(' tipo_base '(' expresion ')' ')'  (93)

	ASIGNACION  shift 28
	'('  shift 29
	'['  shift 30
	ID  reduce 43
	FUN  reduce 43


state 5
	encabezado_if : IF .  (99)

	.  reduce 99


state 6
	programa : ID BEGIN . list_sentencias END  (1)
	programa : ID BEGIN . list_sentencias  (3)

	ID  shift 4
	IF  shift 5
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	list_sentencias  goto 31
	sentencia  goto 13
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 7
	salida_mensaje : OUTF . '(' CADENA ')'  (137)
	salida_mensaje : OUTF . '(' expresion ')'  (138)
	salida_mensaje : OUTF . '(' error ')'  (139)
	salida_mensaje : OUTF . '(' ')'  (140)

	'('  shift 32
	.  error


state 8
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base '>' ID  (84)
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base '>' error  (85)
	declaracion_tipo : TYPEDEF . TRIPLE tipo_base '>' ID  (86)
	declaracion_tipo : TYPEDEF . TRIPLE '<' tipo_base ID  (87)
	declaracion_tipo : TYPEDEF . TRIPLE tipo_base ID  (88)
	declaracion_tipo : TYPEDEF . '<' tipo_base '>' ID  (89)

	TRIPLE  shift 33
	'<'  shift 34
	.  error


state 9
	tipo_base : ULONGINT .  (44)

	.  reduce 44


state 10
	tipo_base : SINGLE .  (45)

	.  reduce 45


state 11
	sentencia_control : FOR . '(' encabezado_for ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR . '(' encabezado_for ')' error  (21)
	sentencia_control : FOR . encabezado_for ')' bloque_sentencias_ejecutables  (22)
	sentencia_control : FOR . '(' encabezado_for bloque_sentencias_ejecutables  (23)

	ID  shift 35
	'('  shift 36
	.  error

	encabezado_for  goto 37
	encabezado_for1  goto 38
	encabezado_for2  goto 39
	asignacion_for  goto 40


state 12
	programa : ID list_sentencias . END  (4)
	programa : ID list_sentencias .  (5)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 41
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	$end  reduce 5

	sentencia  goto 42
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 13
	list_sentencias : sentencia .  (7)

	.  reduce 7


state 14
	sentencia : sentencia_declarativa . ';'  (8)
	sentencia : sentencia_declarativa .  (11)

	';'  shift 43
	$end  reduce 11
	ID  reduce 11
	IF  reduce 11
	END  reduce 11
	OUTF  reduce 11
	TYPEDEF  reduce 11
	RET  reduce 11
	ULONGINT  reduce 11
	SINGLE  reduce 11
	FOR  reduce 11


state 15
	sentencia : sentencia_ejecutable . ';'  (9)
	sentencia : sentencia_ejecutable .  (10)

	';'  shift 44
	$end  reduce 10
	ID  reduce 10
	IF  reduce 10
	END  reduce 10
	OUTF  reduce 10
	TYPEDEF  reduce 10
	RET  reduce 10
	ULONGINT  reduce 10
	SINGLE  reduce 10
	FOR  reduce 10


state 16
	sentencia_declarativa : tipo . list_variables  (12)
	encabezado_funcion : tipo . FUN ID  (49)
	encabezado_funcion : tipo . FUN  (50)

	ID  shift 45
	FUN  shift 46
	.  error

	list_variables  goto 47


state 17
	sentencia_declarativa : declaracion_funcion .  (13)

	.  reduce 13


state 18
	sentencia_declarativa : declaracion_tipo .  (14)

	.  reduce 14


state 19
	sentencia_ejecutable : asignacion .  (15)

	.  reduce 15


state 20
	sentencia_ejecutable : invocacion_funcion .  (16)

	.  reduce 16


state 21
	sentencia_ejecutable : bloque_if .  (17)

	.  reduce 17


state 22
	sentencia_ejecutable : salida_mensaje .  (18)

	.  reduce 18


state 23
	sentencia_ejecutable : sentencia_control .  (19)

	.  reduce 19


state 24
	tipo : tipo_base .  (42)

	.  reduce 42


state 25
	declaracion_funcion : encabezado_funcion . '(' parametro ')' BEGIN cuerpo_funcion $$1 END  (52)
	declaracion_funcion : encabezado_funcion . '(' bloque_list_parametro ')' BEGIN cuerpo_funcion END  (53)
	declaracion_funcion : encabezado_funcion . '(' ')' BEGIN cuerpo_funcion END  (54)

	'('  shift 48
	.  error


state 26
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_unico fin_if  (100)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_bloque fin_if  (101)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if  (102)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if  (103)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if  (104)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (105)
	bloque_if : encabezado_if . '(' condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (106)
	bloque_if : encabezado_if . '(' condicion ')' THEN cuerpo_if_bloque cuerpo_if_unico fin_if  (107)
	bloque_if : encabezado_if . '(' condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico  (108)

	'('  shift 49
	.  error


state 27
	programa : BEGIN list_sentencias . END  (2)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 50
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	.  error

	sentencia  goto 42
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 28
	asignacion : ID ASIGNACION . expresion  (39)
	asignacion : ID ASIGNACION . error  (41)

	error  shift 51
	ID  shift 52
	CONSTANTE  shift 53
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 56
	termino  goto 57
	factor  goto 58


state 29
	invocacion_funcion : ID '(' . expresion ')'  (90)
	invocacion_funcion : ID '(' . bloque_list_expresiones ')'  (91)
	invocacion_funcion : ID '(' . ')'  (92)
	invocacion_funcion : ID '(' . tipo_base '(' expresion ')' ')'  (93)

	error  shift 59
	ID  shift 52
	CONSTANTE  shift 53
	ULONGINT  shift 9
	SINGLE  shift 10
	')'  shift 60
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 61
	tipo_base  goto 62
	termino  goto 57
	factor  goto 58
	bloque_list_expresiones  goto 63
	list_expresiones  goto 64


state 30
	asignacion : ID '[' . CONSTANTE ']' ASIGNACION expresion  (40)

	CONSTANTE  shift 65
	.  error


state 31
	programa : ID BEGIN list_sentencias . END  (1)
	programa : ID BEGIN list_sentencias .  (3)
	list_sentencias : list_sentencias . sentencia  (6)

	ID  shift 4
	IF  shift 5
	END  shift 66
	OUTF  shift 7
	TYPEDEF  shift 8
	ULONGINT  shift 9
	SINGLE  shift 10
	FOR  shift 11
	$end  reduce 3

	sentencia  goto 42
	sentencia_declarativa  goto 14
	sentencia_ejecutable  goto 15
	tipo  goto 16
	declaracion_funcion  goto 17
	declaracion_tipo  goto 18
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	tipo_base  goto 24
	encabezado_funcion  goto 25
	encabezado_if  goto 26


state 32
	salida_mensaje : OUTF '(' . CADENA ')'  (137)
	salida_mensaje : OUTF '(' . expresion ')'  (138)
	salida_mensaje : OUTF '(' . error ')'  (139)
	salida_mensaje : OUTF '(' . ')'  (140)

	error  shift 67
	ID  shift 52
	CONSTANTE  shift 53
	CADENA  shift 68
	')'  shift 69
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	expresion  goto 70
	termino  goto 57
	factor  goto 58


state 33
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base '>' ID  (84)
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base '>' error  (85)
	declaracion_tipo : TYPEDEF TRIPLE . tipo_base '>' ID  (86)
	declaracion_tipo : TYPEDEF TRIPLE . '<' tipo_base ID  (87)
	declaracion_tipo : TYPEDEF TRIPLE . tipo_base ID  (88)

	ULONGINT  shift 9
	SINGLE  shift 10
	'<'  shift 71
	.  error

	tipo_base  goto 72


state 34
	declaracion_tipo : TYPEDEF '<' . tipo_base '>' ID  (89)

	ULONGINT  shift 9
	SINGLE  shift 10
	.  error

	tipo_base  goto 73


state 35
	asignacion_for : ID . ASIGNACION CONSTANTE  (36)

	ASIGNACION  shift 74
	.  error


state 36
	sentencia_control : FOR '(' . encabezado_for ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR '(' . encabezado_for ')' error  (21)
	sentencia_control : FOR '(' . encabezado_for bloque_sentencias_ejecutables  (23)

	ID  shift 35
	.  error

	encabezado_for  goto 75
	encabezado_for1  goto 38
	encabezado_for2  goto 39
	asignacion_for  goto 40


state 37
	sentencia_control : FOR encabezado_for . ')' bloque_sentencias_ejecutables  (22)

	')'  shift 76
	.  error


state 38
	encabezado_for : encabezado_for1 .  (24)

	.  reduce 24


state 39
	encabezado_for : encabezado_for2 .  (25)

	.  reduce 25


state 40
	encabezado_for1 : asignacion_for . ';' condicion ';' up_down CONSTANTE  (26)
	encabezado_for1 : asignacion_for . ';' condicion ';' CONSTANTE  (27)
	encabezado_for1 : asignacion_for . condicion ';' up_down CONSTANTE  (28)
	encabezado_for1 : asignacion_for . ';' condicion up_down CONSTANTE  (29)
	encabezado_for1 : asignacion_for . ';' condicion ';' up_down  (30)
	encabezado_for2 : asignacion_for . ';' condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (31)
	encabezado_for2 : asignacion_for . ';' condicion ';' CONSTANTE ';' '(' condicion ')'  (32)
	encabezado_for2 : asignacion_for . condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (33)
	encabezado_for2 : asignacion_for . ';' condicion up_down CONSTANTE ';' '(' condicion ')'  (34)
	encabezado_for2 : asignacion_for . ';' condicion ';' up_down '(' condicion ')'  (35)

	error  shift 77
	ID  shift 52
	CONSTANTE  shift 53
	';'  shift 78
	'('  shift 79
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	condicion  goto 80
	expresion  goto 81
	termino  goto 57
	factor  goto 58


state 41
	programa : ID list_sentencias END .  (4)

	.  reduce 4


state 42
	list_sentencias : list_sentencias sentencia .  (6)

	.  reduce 6


state 43
	sentencia : sentencia_declarativa ';' .  (8)

	.  reduce 8


state 44
	sentencia : sentencia_ejecutable ';' .  (9)

	.  reduce 9


state 45
	list_variables : ID .  (48)

	.  reduce 48


state 46
	encabezado_funcion : tipo FUN . ID  (49)
	encabezado_funcion : tipo FUN .  (50)

	ID  shift 82
	'('  reduce 50


47: shift/reduce conflict (shift 83, reduce 12) on ID
state 47
	sentencia_declarativa : tipo list_variables .  (12)
	list_variables : list_variables . ',' ID  (46)
	list_variables : list_variables . ID  (47)

	ID  shift 83
	','  shift 84
	$end  reduce 12
	IF  reduce 12
	END  reduce 12
	OUTF  reduce 12
	TYPEDEF  reduce 12
	RET  reduce 12
	ULONGINT  reduce 12
	SINGLE  reduce 12
	FOR  reduce 12
	';'  reduce 12


state 48
	declaracion_funcion : encabezado_funcion '(' . parametro ')' BEGIN cuerpo_funcion $$1 END  (52)
	declaracion_funcion : encabezado_funcion '(' . bloque_list_parametro ')' BEGIN cuerpo_funcion END  (53)
	declaracion_funcion : encabezado_funcion '(' . ')' BEGIN cuerpo_funcion END  (54)

	ID  shift 85
	ULONGINT  shift 9
	SINGLE  shift 10
	')'  shift 86
	.  error

	tipo  goto 87
	tipo_base  goto 24
	parametro  goto 88
	bloque_list_parametro  goto 89
	list_parametro  goto 90


state 49
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_unico fin_if  (100)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_bloque fin_if  (101)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_unico fin_if  (102)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_bloque fin_if  (103)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_unico ELSE cuerpo_if_bloque fin_if  (104)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (105)
	bloque_if : encabezado_if '(' . condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico fin_if  (106)
	bloque_if : encabezado_if '(' . condicion ')' THEN cuerpo_if_bloque cuerpo_if_unico fin_if  (107)
	bloque_if : encabezado_if '(' . condicion ')' cuerpo_if_bloque ELSE cuerpo_if_unico  (108)

	error  shift 77
	ID  shift 52
	CONSTANTE  shift 53
	'('  shift 79
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	condicion  goto 91
	expresion  goto 81
	termino  goto 57
	factor  goto 58


state 50
	programa : BEGIN list_sentencias END .  (2)

	.  reduce 2


state 51
	asignacion : ID ASIGNACION error .  (41)

	.  reduce 41


state 52
	factor : ID .  (77)
	factor : ID . '[' CONSTANTE ']'  (80)
	invocacion_funcion : ID . '(' expresion ')'  (90)
	invocacion_funcion : ID . '(' bloque_list_expresiones ')'  (91)
	invocacion_funcion : ID . '(' ')'  (92)
	invocacion_funcion : ID . '(' tipo_base '(' expresion ')' ')'  (93)

	'('  shift 29
	'['  shift 92
	$end  reduce 77
	ID  reduce 77
	MAYORIGUAL  reduce 77
	MENORIGUAL  reduce 77
	DISTINTO  reduce 77
	IF  reduce 77
	END  reduce 77
	OUTF  reduce 77
	TYPEDEF  reduce 77
	RET  reduce 77
	ULONGINT  reduce 77
	SINGLE  reduce 77
	FOR  reduce 77
	UP  reduce 77
	DOWN  reduce 77
	','  reduce 77
	';'  reduce 77
	')'  reduce 77
	'+'  reduce 77
	'-'  reduce 77
	'*'  reduce 77
	'/'  reduce 77
	'<'  reduce 77
	'>'  reduce 77
	'='  reduce 77


state 53
	factor : CONSTANTE .  (78)

	.  reduce 78


state 54
	factor : '-' . ID  (81)
	factor : '-' . CONSTANTE  (82)
	factor : '-' . ID '[' CONSTANTE ']'  (83)

	ID  shift 93
	CONSTANTE  shift 94
	.  error


state 55
	factor : invocacion_funcion .  (79)

	.  reduce 79


state 56
	asignacion : ID ASIGNACION expresion .  (39)
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)
	expresion : expresion . '+' error  (70)
	expresion : expresion . '-' error  (71)

	'+'  shift 95
	'-'  shift 96
	$end  reduce 39
	ID  reduce 39
	IF  reduce 39
	END  reduce 39
	OUTF  reduce 39
	TYPEDEF  reduce 39
	RET  reduce 39
	ULONGINT  reduce 39
	SINGLE  reduce 39
	FOR  reduce 39
	';'  reduce 39


state 57
	expresion : termino .  (69)
	termino : termino . '*' factor  (72)
	termino : termino . '/' factor  (73)
	termino : termino . '*' error  (75)
	termino : termino . '/' error  (76)

	'*'  shift 97
	'/'  shift 98
	$end  reduce 69
	ID  reduce 69
	MAYORIGUAL  reduce 69
	MENORIGUAL  reduce 69
	DISTINTO  reduce 69
	IF  reduce 69
	END  reduce 69
	OUTF  reduce 69
	TYPEDEF  reduce 69
	RET  reduce 69
	ULONGINT  reduce 69
	SINGLE  reduce 69
	FOR  reduce 69
	UP  reduce 69
	DOWN  reduce 69
	','  reduce 69
	';'  reduce 69
	')'  reduce 69
	'+'  reduce 69
	'-'  reduce 69
	'<'  reduce 69
	'>'  reduce 69
	'='  reduce 69


state 58
	termino : factor .  (74)

	.  reduce 74


state 59
	list_expresiones : error .  (136)

	.  reduce 136


state 60
	invocacion_funcion : ID '(' ')' .  (92)

	.  reduce 92


state 61
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)
	expresion : expresion . '+' error  (70)
	expresion : expresion . '-' error  (71)
	invocacion_funcion : ID '(' expresion . ')'  (90)
	list_expresiones : expresion .  (135)

	')'  shift 99
	'+'  shift 95
	'-'  shift 96
	','  reduce 135


state 62
	invocacion_funcion : ID '(' tipo_base . '(' expresion ')' ')'  (93)

	'('  shift 100
	.  error


state 63
	invocacion_funcion : ID '(' bloque_list_expresiones . ')'  (91)

	')'  shift 101
	.  error


state 64
	bloque_list_expresiones : list_expresiones . ',' expresion  (133)
	list_expresiones : list_expresiones . ',' expresion  (134)

	','  shift 102
	.  error


state 65
	asignacion : ID '[' CONSTANTE . ']' ASIGNACION expresion  (40)

	']'  shift 103
	.  error


state 66
	programa : ID BEGIN list_sentencias END .  (1)

	.  reduce 1


state 67
	salida_mensaje : OUTF '(' error . ')'  (139)

	')'  shift 104
	.  error


state 68
	salida_mensaje : OUTF '(' CADENA . ')'  (137)

	')'  shift 105
	.  error


state 69
	salida_mensaje : OUTF '(' ')' .  (140)

	.  reduce 140


state 70
	expresion : expresion . '+' termino  (67)
	expresion : expresion . '-' termino  (68)
	expresion : expresion . '+' error  (70)
	expresion : expresion . '-' error  (71)
	salida_mensaje : OUTF '(' expresion . ')'  (138)

	')'  shift 106
	'+'  shift 95
	'-'  shift 96
	.  error


state 71
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base '>' ID  (84)
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base '>' error  (85)
	declaracion_tipo : TYPEDEF TRIPLE '<' . tipo_base ID  (87)

	ULONGINT  shift 9
	SINGLE  shift 10
	.  error

	tipo_base  goto 107


state 72
	declaracion_tipo : TYPEDEF TRIPLE tipo_base . '>' ID  (86)
	declaracion_tipo : TYPEDEF TRIPLE tipo_base . ID  (88)

	ID  shift 108
	'>'  shift 109
	.  error


state 73
	declaracion_tipo : TYPEDEF '<' tipo_base . '>' ID  (89)

	'>'  shift 110
	.  error


state 74
	asignacion_for : ID ASIGNACION . CONSTANTE  (36)

	CONSTANTE  shift 111
	.  error


state 75
	sentencia_control : FOR '(' encabezado_for . ')' bloque_sentencias_ejecutables  (20)
	sentencia_control : FOR '(' encabezado_for . ')' error  (21)
	sentencia_control : FOR '(' encabezado_for . bloque_sentencias_ejecutables  (23)

	ID  shift 112
	IF  shift 5
	BEGIN  shift 113
	OUTF  shift 7
	FOR  shift 11
	')'  shift 114
	.  error

	sentencia_ejecutable  goto 115
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	bloque_sentencias_ejecutables  goto 116
	encabezado_if  goto 26


state 76
	sentencia_control : FOR encabezado_for ')' . bloque_sentencias_ejecutables  (22)

	ID  shift 112
	IF  shift 5
	BEGIN  shift 113
	OUTF  shift 7
	FOR  shift 11
	.  error

	sentencia_ejecutable  goto 115
	asignacion  goto 19
	invocacion_funcion  goto 20
	bloque_if  goto 21
	salida_mensaje  goto 22
	sentencia_control  goto 23
	bloque_sentencias_ejecutables  goto 117
	encabezado_if  goto 26


state 77
	condicion : error .  (132)

	.  reduce 132


state 78
	encabezado_for1 : asignacion_for ';' . condicion ';' up_down CONSTANTE  (26)
	encabezado_for1 : asignacion_for ';' . condicion ';' CONSTANTE  (27)
	encabezado_for1 : asignacion_for ';' . condicion up_down CONSTANTE  (29)
	encabezado_for1 : asignacion_for ';' . condicion ';' up_down  (30)
	encabezado_for2 : asignacion_for ';' . condicion ';' up_down CONSTANTE ';' '(' condicion ')'  (31)
	encabezado_for2 : asignacion_for ';' . condicion ';' CONSTANTE ';' '(' condicion ')'  (32)
	encabezado_for2 : asignacion_for ';' . condicion up_down CONSTANTE ';' '(' condicion ')'  (34)
	encabezado_for2 : asignacion_for ';' . condicion ';' up_down '(' condicion ')'  (35)

	error  shift 77
	ID  shift 52
	CONSTANTE  shift 53
	'('  shift 79
	'-'  shift 54
	.  error

	invocacion_funcion  goto 55
	condicion  goto 118
	expresion  goto 81
	termino  goto 57
	factor  goto 58


state 79
	condicion : '(' . $$2 bloque_list_expresiones $$3 ')' comparacion '(' $$4 bloque_list_expresiones $$5 ')'  (131)
	$$2 : .  (127)
